# Deep_learning_project

./: .gitignore  .gitmodules  README.md  diapo.ipynb  train_cellvit_classifier.slurm
cellvit_plus_plus/: README.md  main.py  prepare_cellvit_dataset.py  prepare_dataset.py  prepare_puma_for_cellvit.py  prepare_puma_for_cellvit_segmentation.py  pyproject.toml  train_cellvit_classifier.slurm  training-configuration.yaml
code/: main.ipynb  prepare_cellvit_dataset.py  preprocess_data.py  puma_hovernet_training.ipynb  puma_hovernet_training_v2.ipynb  pyproject.toml  train_hovernet.slurm
diaporama/: diaporama.ipynb  pyproject.toml  wandbinfo.ipynb
hovernet/: preprocess_data_hovernet.py  pyproject.toml  train_hovernet.slurm
nnunet/: main.py  prepare_dataset_nsclc_nnunet.py  prepare_dataset_puma_nnunet.py  preprocess_nnunet.slurm  pyproject.toml  train_nnunet.slurm
nnunet/nnunet_custom_classes/training/loss/: ce_ignore.py
nnunet/nnunet_custom_classes/training/nnUNetTrainer/: nnUNetTrainerIgnoreIndex.py
