[project]
name = "diaporama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pandoc>=2.4",
    "pip>=25.1",
    "seaborn>=0.13.2",
    "wandb>=0.19.10",
]

[dependency-groups]
dev = ["nbconvert>=7.16.6", "ipykernel>=6.29.5"]
